app/assets/stylesheets/modules/map/_timeline-torque.scss
.widget-timeline .timeline-year.timeline-torque {
  padding-left: 10px;
  width: 900px;

  .timeline-date-pickers {
    display: inline-block;
    width: 385px;

    position: relative;
    top: -22px;
  }

  .timeline-date-pickers input {
    width: 100px;
  }

  .slider .handle {
    transform: none;
  }

  .play {
    display: inline-block;
    left: auto;
  }

  .play:after {
    right: 100%;
  }

  .play .stop-icon {
    display: block;
  }

  .domain {
    stroke: #a1ba42;
    stroke-width: 4;
  }

  .timeline-date {
    width: 100px;
    padding: 0 5px;
    margin-right: 5px;
  }

  .timeline-slider {
    display: inline-flex;
    align-items: center;
    justify-content: space-between;

    margin-left: 50px;
    width: 450px;
  }
}

